# pydantic_quest

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci-pr.yml  ci-push.yml  ci.yml  ruff.yml  tests.yml
backend/: .coverage  Dockerfile  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 037cb3c6b0be_eval_script.py  07cf28a126c6_merge_heads.py  0b7e7f6f2a4d_add_cascade_delete_to_lesson_progress.py  1d7a4e2f19c3_lesson_code_editor_default.py  1f2e3d4c5b6a_lesson_progress.py  374aae5957dc_github.py  3bf98863bcca_front.py  3fcb1df8a9f2_add_questions_to_lessons.py  4223c6b0fcb4_init.py  4b7d0f1e9f6a_make_lesson_order_hierarchical_path.py  5924f24c7bd7_default_executor.py  642e01a7aceb_hierarchy.py  7a9b4c7f9140_remove_legacy.py  80212e13c5f9_users.py  8c7e3c1b5e21_add_no_code_flag_to_lessons.py  92db3c1d4406_lesson_eval_defaults.py  9b1d8c5e4d7a_github_oauth_fields.py  c695af9e7681_remove_expected_output.py  d387acddcac2_lesson_eval_fields.py  dad80be0142c_initial.py  e558abd4298f_align_lessons_schema_with_cases_column.py
backend/scripts/: migrate.sh  test.sh
backend/src/cfg/: cfg.py
backend/tests/: conftest.py  test_auth.py  test_code_analysis_service.py  test_content_loader_validator.py  test_dto_validation.py  test_execution.py  test_execution_result_parser.py  test_github_oauth_service.py  test_health.py  test_lesson_progress_service.py  test_lessons.py  test_lessons_sync.py  test_piston_service.py  test_security_user.py  test_services.py
cfg/: cfg.py
docker/piston/: Dockerfile  bootstrap.sh  install-runtime.js
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: env.d.ts  main.tsx
frontend/src/app/: App.tsx  AuthTokenHandler.tsx
frontend/tests/e2e/: code-runner.spec.ts
lessons/: index.yaml
lessons/01-introduction/: lesson.yaml  starter.py
lessons/02-pydantic/01-dynamic-types/: lesson.yaml  starter.py
lessons/02-pydantic/02-type-hints/: lesson.yaml  quiz.yaml
lessons/02-pydantic/03-data-validation/: theory.md
lessons/02-pydantic/04-validating-in-business/: lesson.yaml  theory.md
lessons/02-pydantic/05-validating-in-model/: quiz.yaml
lessons/03-pydantic-vs-dataclasses/: theory.md
lessons/04-basemodel/: lesson.yaml  quiz.yaml
lessons/basemodel/: cases.yaml  starter.py  theory.md
lessons/deleted lessons/: explanation.md
lessons/how-basemodel-validates-data/: cases.yaml  theory.md
lessons/intro-model/: cases.yaml  lesson.yaml  starter.py  theory.md
lessons/introduction/: quiz.yaml  starter.py  theory.md
lessons/lesson-template/: cases.yaml  lesson.yaml  quiz.yaml  starter.py  theory.md
lessons/pydantic/: theory.md
lessons/pydantic-vs-dataclasses/: lesson.yaml  theory.md
lessons/type-coercion/: quiz.yaml  theory.md
lessons/validation-errors/: lesson.yaml
migrations/: env.py
migrations/versions/: 1049f753e801_timestamps_defaults.py  a5f9d6c593d2_initial.py  c98807ed4d76_lesson_order.py  dad80be0142c_initial.py  ff4e09a9fdf4_init.py
scripts/: migrate.sh
(+219 files in other folders)
