[project]
name = "pydantic-quest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14.2"
dependencies = [
    "alembic>=1.16.0",
    "aiomysql>=0.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.9.0",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.40.0",
    "cryptography>=46.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["backend/src"]
exclude = [
    "backend/migrations",
    "backend/scripts",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "B", "N", "UP", "SIM", "C4", "T20", "ARG", "ASYNC", "ANN", "FBT", "COM", "C4", "PLC", "DTZ", "EM", "PIE", "T20", "PT", "RSE", "RET", "TC"]
ignore = ["E501", "B008"]

[tool.ruff.format]
