[project]
name = "pydantic-quest"
version = "0.1.0"
description = "Free interactive course on Pydantic"
requires-python = ">=3.14.2"
dependencies = [
    "alembic>=1.16.0",
    "aiomysql>=0.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.9.0",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.40.0",
    "cryptography>=46.0.3",
    "ruff>=0.14.14",
]

[project.optional-dependencies]
test = [
    "aiosqlite>=0.20.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["backend/src"]
exclude = [
    "backend/migrations",
    "backend/scripts",
    ".venv",
]

[tool.ruff.lint]
select = ["FURB", "W", "PLW", "RUF", "E", "F", "B", "N", "UP", "SIM", "C4", "T20", "ARG", "ASYNC", "ANN", "FBT", "COM", "C4", "PLC", "DTZ", "EM", "PIE", "T20", "PT", "RSE", "RET", "TRY"]
ignore = [
    "E501",
    "B008",
    "RET504",
    "W293",
]

[tool.ruff.format]
